[gd_scene load_steps=7 format=3 uid="uid://dvntq7yveqlf2"]

[ext_resource type="Script" path="res://Scripts/menu_gameover.gd" id="1_iiy7s"]
[ext_resource type="Texture2D" uid="uid://bv6k0rgt5fflv" path="res://Assets/AppImages/AppBackground2.svg" id="2_t4x6c"]
[ext_resource type="Theme" uid="uid://cvspf4xjenj4p" path="res://score_label.tres" id="4_ynk00"]
[ext_resource type="Theme" uid="uid://ckug1xsi8idn6" path="res://option_buttons_theme.tres" id="6_b0g1b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8dtv"]
bg_color = Color(0.917647, 0.858824, 0.160784, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.690196, 0.643137, 0.0705882, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_c3xwx"]
Label/font_sizes/font_size = 90
Label/styles/normal = SubResource("StyleBoxFlat_i8dtv")

[node name="Node2D" type="Node2D"]

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="MenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t4x6c")
expand_mode = 4

[node name="Control" type="Control" parent="MenuLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iiy7s")
metadata/_edit_use_anchors_ = true

[node name="MenuContainer" type="VBoxContainer" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -186.0
offset_right = 313.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_b0g1b")
alignment = 1

[node name="start_button" type="Button" parent="MenuLayer/Control/MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="quit_button" type="Button" parent="MenuLayer/Control/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="ScoreContainer" type="VBoxContainer" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -359.0
offset_top = 100.0
offset_right = 359.0
offset_bottom = 471.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BestScore" type="Label" parent="MenuLayer/Control/ScoreContainer"]
layout_mode = 2
theme = ExtResource("4_ynk00")
text = "BestScore"
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="MenuLayer/Control/ScoreContainer"]
layout_mode = 2
theme = SubResource("Theme_c3xwx")
text = "CurrentScore"
horizontal_alignment = 1
